force-app/main/default/objects/Sensitive_Data__c/Sensitive_Data__c.object-meta.xml
<CustomObject>
    <label>Sensitive Data</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Sensitive Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensitive Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>