force-app/main/default/objects/Sensitive_Data__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Location of the Service we are providing if different to the Person&apos;s Home Address</inlineHelpText>
    <label>Address</label>
    <type>Address</type>
</CustomField>