force-app/main/default/objects/Sensitive_Data__c/fields/Background_Information__c.field-meta.xml
<CustomField>
    <fullName>Background_Information__c</fullName>
    <label>Background Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>