force-app/main/default/objects/Sensitive_Data__c/fields/Child_Protection_Plan__c.field-meta.xml
<CustomField>
    <fullName>Child_Protection_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Protection Plan</label>
    <type>Checkbox</type>
</CustomField>