force-app/main/default/objects/Sensitive_Data__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding Ended</fullName>
            </value>
            <value>
                <fullName>Post-16 Pathway</fullName>
                <label>Post-16 Pathway Secured</label>
            </value>
            <value>
                <fullName>Reintegration to School/College</fullName>
            </value>
            <value>
                <fullName>Student Moved Out of Area</fullName>
            </value>
            <value>
                <fullName>Employment Secured</fullName>
            </value>
            <value>
                <fullName>Planned Tuition Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Tutor Unsuitable</fullName>
            </value>
            <value>
                <fullName>Provision Unsuitable for Student</fullName>
            </value>
            <value>
                <fullName>Tutor Ended &amp; No Replacement Available</fullName>
            </value>
            <value>
                <fullName>Non-Engagement / Persistent Absence</fullName>
            </value>
            <value>
                <fullName>Parent/Carer Withdrawal</fullName>
            </value>
            <value>
                <fullName>Commissioner Withdrawal</fullName>
            </value>
            <value>
                <fullName>Health-Related End</fullName>
            </value>
            <value>
                <fullName>Safeguarding End</fullName>
            </value>
            <value>
                <fullName>Other External Reason</fullName>
            </value>
            <value>
                <fullName>Reason Job is Closed</fullName>
                <isActive>false</isActive>
                <label>Reason Job is Closed</label>
            </value>
            <value>
                <fullName>Reason Record is inactive</fullName>
                <isActive>false</isActive>
                <label>Reason Record is inactive</label>
            </value>
            <value>
                <fullName>Transition to new AP provider</fullName>
                <isActive>false</isActive>
                <label>Transition to new AP provider</label>
            </value>
            <value>
                <fullName>Unable to fill referral</fullName>
                <isActive>false</isActive>
                <label>Unable to fill referral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>