force-app/main/default/objects/Sensitive_Data__c/fields/Closed_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason_Description__c</fullName>
    <label>Closed Reason Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>