force-app/main/default/objects/Sensitive_Data__c/fields/Contact_Restrictions_Risks__c.field-meta.xml
<CustomField>
    <fullName>Contact_Restrictions_Risks__c</fullName>
    <inlineHelpText>Are there any Contact Restrictions/Risks that we should be aware of e.g. Parents, Siblings, dangerous individuals known to the Family or Child/Young Person</inlineHelpText>
    <label>Contact Restrictions / Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>