force-app/main/default/objects/Sensitive_Data__c/fields/Court_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Court_Care_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court Care Plan</label>
    <type>Checkbox</type>
</CustomField>