force-app/main/default/objects/Sensitive_Data__c/fields/Current_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone_Number__c</fullName>
    <label>Current Phone Number</label>
    <type>Phone</type>
</CustomField>