force-app/main/default/objects/Sensitive_Data__c/fields/Description_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Risk__c</fullName>
    <label>Description of Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>