force-app/main/default/objects/Sensitive_Data__c/fields/DoLs_in_Place_Deprivation_of_Liberty__c.field-meta.xml
<CustomField>
    <fullName>DoLs_in_Place_Deprivation_of_Liberty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoLs in Place? (Deprivation of Liberty)</label>
    <type>Checkbox</type>
</CustomField>