force-app/main/default/objects/Sensitive_Data__c/fields/Ethnic_Origin__c.field-meta.xml
<CustomField>
    <fullName>Ethnic_Origin__c</fullName>
    <label>Ethnic Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Any other Asian background</fullName>
            </value>
            <value>
                <fullName>Any other Black / African / Caribbean background</fullName>
            </value>
            <value>
                <fullName>Any other Mixed / Multiple background</fullName>
            </value>
            <value>
                <fullName>Any other White background</fullName>
            </value>
            <value>
                <fullName>Arab</fullName>
            </value>
            <value>
                <fullName>Asian or Asian British</fullName>
            </value>
            <value>
                <fullName>Asian or Asian British Bangladeshi</fullName>
            </value>
            <value>
                <fullName>Asian or Asian British Indian</fullName>
            </value>
            <value>
                <fullName>Asian or Asian British Pakistani</fullName>
            </value>
            <value>
                <fullName>Black or Black British African</fullName>
            </value>
            <value>
                <fullName>Black or Black British Caribbean</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>I do not wish to state</fullName>
            </value>
            <value>
                <fullName>Other ethnic group</fullName>
            </value>
            <value>
                <fullName>White and Asian</fullName>
            </value>
            <value>
                <fullName>White and Black African</fullName>
            </value>
            <value>
                <fullName>White and Black Caribbean</fullName>
            </value>
            <value>
                <fullName>White British</fullName>
            </value>
            <value>
                <fullName>White Gypsy or Irish Traveller</fullName>
            </value>
            <value>
                <fullName>White Irish</fullName>
            </value>
            <value>
                <fullName>White Welsh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>