force-app/main/default/objects/Sensitive_Data__c/fields/Family_Support_and_Views__c.field-meta.xml
<CustomField>
    <fullName>Family_Support_and_Views__c</fullName>
    <inlineHelpText>Please outline the support currently provided to the family and their views regarding the intervention</inlineHelpText>
    <label>Family Support and Views</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>