force-app/main/default/objects/Sensitive_Data__c/fields/Language_Spoken_Forms_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Language_Spoken_Forms_of_Communication__c</fullName>
    <label>Language Spoken / Forms of Communication</label>
    <type>TextArea</type>
</CustomField>