force-app/main/default/objects/Sensitive_Data__c/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>