force-app/main/default/objects/Sensitive_Data__c/fields/Name_of_Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Parent_Guardian__c</fullName>
    <label>Name of Parent / Guardian</label>
    <length>100</length>
    <type>Text</type>
</CustomField>