force-app/main/default/objects/Sensitive_Data__c/fields/Name_of_School__c.field-meta.xml
<CustomField>
    <fullName>Name_of_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sensitive Data</relationshipLabel>
    <relationshipName>Sensitive_Data</relationshipName>
    <type>Lookup</type>
</CustomField>