force-app/main/default/objects/Sensitive_Data__c/fields/Other_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_1__c</fullName>
    <label>Other Contact 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>