force-app/main/default/objects/Sensitive_Data__c/fields/Other_Contact_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_1_Phone__c</fullName>
    <label>Other Contact 1 Phone</label>
    <type>Phone</type>
</CustomField>