force-app/main/default/objects/Sensitive_Data__c/fields/Other_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_2__c</fullName>
    <label>Other Contact 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>