force-app/main/default/objects/Sensitive_Data__c/fields/Parent_Guardian_Address_if_Different__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Address_if_Different__c</fullName>
    <description>Please provide the Parent / Guardian&apos;s Address if this is different to the Child / Young Person</description>
    <inlineHelpText>Please provide the Parent / Guardian&apos;s Address if this is different to the Child / Young Person</inlineHelpText>
    <label>Parent / Guardian Address if Different</label>
    <type>Address</type>
</CustomField>