force-app/main/default/objects/Sensitive_Data__c/fields/Parental_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Parental_Responsibility__c</fullName>
    <inlineHelpText>Please specify who holds Parental Responsibility, for example Parent, Grandparent, Aunt/Uncle, Foster Carer etc.</inlineHelpText>
    <label>Parental Responsibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoptive Parent(s)</fullName>
            </value>
            <value>
                <fullName>Both Parents</fullName>
            </value>
            <value>
                <fullName>Court‑Appointed Guardian</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Foster Carer(s)</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>Special Guardian(s)</fullName>
            </value>
            <value>
                <fullName>Step‑Parent with PR</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>