force-app/main/default/objects/Sensitive_Data__c/fields/Prospero_Functional_Skills__c.field-meta.xml
<CustomField>
    <fullName>Prospero_Functional_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick if Functional Skills are to be facilitated through Prospero</inlineHelpText>
    <label>Prospero Functional Skills</label>
    <type>Checkbox</type>
</CustomField>