force-app/main/default/objects/Sensitive_Data__c/fields/Prospero_GCSEs__c.field-meta.xml
<CustomField>
    <fullName>Prospero_GCSEs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick if GCSE&apos;S are to be facilitated through Prospero</inlineHelpText>
    <label>Prospero GCSE&apos;s</label>
    <type>Checkbox</type>
</CustomField>