force-app/main/default/objects/Sensitive_Data__c/fields/Pupil_Profile__c.field-meta.xml
<CustomField>
    <fullName>Pupil_Profile__c</fullName>
    <label>Pupil Profile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child In Need</fullName>
            </value>
            <value>
                <fullName>Child Protection Plan</fullName>
            </value>
            <value>
                <fullName>Child Looked After</fullName>
            </value>
            <value>
                <fullName>EHCP (Educational Health Care Plan)</fullName>
            </value>
            <value>
                <fullName>EAL (English as an Additional Language)</fullName>
            </value>
            <value>
                <fullName>NEET (Not In Education Employment or Training)</fullName>
            </value>
            <value>
                <fullName>SEN (no EHCP)</fullName>
            </value>
            <value>
                <fullName>Court Care Plan</fullName>
            </value>
            <value>
                <fullName>DoLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>