force-app/main/default/objects/Sensitive_Data__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <label>Reference ID</label>
    <length>65</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>