force-app/main/default/objects/Sensitive_Data__c/fields/Relevant_Health_History__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Health_History__c</fullName>
    <inlineHelpText>Health issues, disability, allergies, medication etc. Please specify how medication is administered, strength, how often this should be taken etc.</inlineHelpText>
    <label>Relevant Health History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>