force-app/main/default/objects/Sensitive_Data__c/fields/Risk_Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>