force-app/main/default/objects/Sensitive_Data__c/fields/Risk_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Risk_Matrix__c</fullName>
    <label>Risk Matrix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>