force-app/main/default/objects/Sensitive_Data__c/fields/School_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>School_Contact_Email__c</fullName>
    <formula>School_Contact_Name__r.Email</formula>
    <label>School Contact Email</label>
    <type>Text</type>
</CustomField>