force-app/main/default/objects/Sensitive_Data__c/fields/School_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Name_of_School__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sensitive Data</relationshipLabel>
    <relationshipName>Sensitive_Data</relationshipName>
    <type>Lookup</type>
</CustomField>