force-app/main/default/objects/Sensitive_Data__c/fields/School_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>School_Contact_Phone__c</fullName>
    <formula>School_Contact_Name__r.Phone</formula>
    <label>School Contact Phone</label>
    <type>Text</type>
</CustomField>