force-app/main/default/objects/Sensitive_Data__c/fields/School_on_Roll_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>School_on_Roll_if_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School on Roll (if applicable)</label>
    <type>Checkbox</type>
</CustomField>