force-app/main/default/objects/Sensitive_Data__c/fields/Social_Worker_Email__c.field-meta.xml
<CustomField>
    <fullName>Social_Worker_Email__c</fullName>
    <label>Social Worker Email</label>
    <type>Email</type>
</CustomField>