force-app/main/default/objects/Sensitive_Data__c/fields/Social_Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Social_Worker_Name__c</fullName>
    <label>Social Worker Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>