force-app/main/default/objects/Sensitive_Data__c/fields/Staff_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Staff_Numbers__c</fullName>
    <inlineHelpText>Please specify if this individual requires 1:1, 2:1, or 3:1 staff ratio</inlineHelpText>
    <label>Staff Numbers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:1</fullName>
            </value>
            <value>
                <fullName>2:1</fullName>
            </value>
            <value>
                <fullName>3:1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>