force-app/main/default/objects/Sensitive_Data__c/fields/Support_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Support_Requirements__c</fullName>
    <inlineHelpText>Please specify if there are any special support requirements. For example Ratio, Driver, Training, Male or Female staff required? etc.</inlineHelpText>
    <label>Support Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>