force-app/main/default/objects/Sensitive_Data__c/fields/URN__c.field-meta.xml
<CustomField>
    <fullName>URN__c</fullName>
    <label>URN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>