force-app/main/default/objects/Sensitive_Data__c/fields/Year_Group__c.field-meta.xml
<CustomField>
    <fullName>Year_Group__c</fullName>
    <label>Year Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>Adult 26+</fullName>
            </value>
            <value>
                <fullName>EYFS</fullName>
            </value>
            <value>
                <fullName>Post 13 18-25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>