force-app/main/default/objects/Sensitive_Data__c/validationRules/Closed_Reason_req_when_Closed_is_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Reason_req_when_Closed_is_True</fullName>
    <active>true</active>
    <description>https://1218globaluk.eu.teamwork.com/app/tasks/36112755</description>
    <errorConditionFormula>AND(
			NOT($Permission.Bypass_System_Automation),
   Closed__c = True,
   ISBLANK(Closed_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Closed_Reason__c</errorDisplayField>
    <errorMessage>You must add a Closed Reason</errorMessage>
</ValidationRule>