force-app/main/default/objects/Sensitive_Data__c/validationRules/School_req_when_School_on_Role_is_True.validationRule-meta.xml
<ValidationRule>
    <fullName>School_req_when_School_on_Role_is_True</fullName>
    <active>false</active>
    <description>https://1218globaluk.eu.teamwork.com/app/tasks/36112755</description>
    <errorConditionFormula>AND(
				NOT($Permission.Bypass_System_Automation),
    School_on_Roll_if_applicable__c = True,
    ISBLANK( Name_of_School__c)
)</errorConditionFormula>
    <errorDisplayField>Name_of_School__c</errorDisplayField>
    <errorMessage>You must add the Name of School</errorMessage>
</ValidationRule>